[gd_scene load_steps=2 format=3 uid="uid://2cf3v2l5u0bu"]

[ext_resource type="Script" path="res://examples/multiple_saves/multiple_saves.gd" id="1_x7ak1"]

[node name="MultipleSaves" type="Node2D"]
script = ExtResource("1_x7ak1")

[node name="UsernameIs" type="Label" parent="."]
offset_left = 448.0
offset_top = 192.0
offset_right = 656.0
offset_bottom = 215.0
text = "Your Username is:"

[node name="Username" type="Label" parent="."]
offset_left = 448.0
offset_top = 224.0
offset_right = 656.0
offset_bottom = 247.0
text = "XXXX"

[node name="UsernameInput" type="LineEdit" parent="."]
offset_left = 448.0
offset_top = 136.0
offset_right = 661.0
offset_bottom = 167.0
placeholder_text = "Username"

[node name="GameSaveName" type="LineEdit" parent="."]
offset_left = 416.0
offset_top = 352.0
offset_right = 704.0
offset_bottom = 383.0
placeholder_text = "Inform the save_game name"

[node name="Save" type="Button" parent="."]
offset_left = 328.0
offset_top = 432.0
offset_right = 472.0
offset_bottom = 463.0
text = "Save Game in File"

[node name="Load" type="Button" parent="."]
offset_left = 616.0
offset_top = 432.0
offset_right = 760.0
offset_bottom = 463.0
text = "Load Game in File"

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
